--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,31 @@
-/* CSS for Dark Mode */
-body.dark-mode {
-    background-color: #121212;
-    color: #ffffff;
+/* styles.css */
+:root {
+    --font-family: 'Arial, sans-serif';
+    --color-light: #333;
+    --color-dark: #f5f5f5;
+    --background-light: lightcoral;
+    --background-dark: #121212;
+    --header-background-light: #f8f8f8;
+    --header-background-dark: #1f1f1f;
+    --card-background-light: #fff;
+    --card-background-dark: #1c1c1c;
+    --box-shadow-light: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    --box-shadow-dark: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    --button-background: #28a745;
+    --button-color: #fff;
+    --highlight-color: #007bff;
   }
   
-  .navbar-dark .navbar-brand,
-  .navbar-dark .navbar-nav .nav-link,
-  .navbar-dark .navbar-toggler {
-    color: rgba(255, 255, 255, 0.8);
+  [data-theme='dark'] {
+    --color-light: #f5f5f5;
+    --color-dark: #333;
+    --background-light: #121212;
+    --background-dark: lightcoral;
+    --header-background-light: #1f1f1f;
+    --header-background-dark: #f8f8f8;
+    --card-background-light: #1c1c1c;
+    --card-background-dark: #fff;
+    --box-shadow-light: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    --box-shadow-dark: 0px 2px 5px rgba(0, 0, 0, 0.1);
   }
   
